[package]
name = "sam3x8e"
version = "0.1.0"
authors = ["Raphael Theiler <peanut@esheep.ch>"]
test = false
bench = false

[lib]
test = false

[dependencies]
bare-metal = "0.2.0"
cortex-m = "0.5.8"
vcell = "0.1.0"

[dependencies.cortex-m-rt]
optional = true
version = "0.6.5"

[features]
rt = ["cortex-m-rt/device"]