[package]
name = "sam3x8e"
version = "0.1.0"
authors = ["Raphael Theiler <peanut@esheep.ch>"]
test = false
bench = false
edition = "2018"
repository = "https://github.com/ammoniak/sam3x8e"
license = "MIT/Apache-2.0"
keywords = ["sam3x", "sam3x8e", "Arduino due", "no_std", "embedded"]
readme = "Readme.md"
description "Device support crate for sam3x8e devices"

[lib]
test = false

[dependencies]
bare-metal = "0.2.0"
cortex-m = "0.5.8"
vcell = "0.1.0"

[dependencies.cortex-m-rt]
optional = true
version = "0.6.5"

[features]
rt = ["cortex-m-rt/device"]
