[package]
name = "sam3x8e"
version = "0.1.1"
authors = ["Raphael Theiler <peanut@esheep.ch>"]
test = false
bench = false
edition = "2018"
repository = "https://github.com/ammoniak/sam3x8e"
license = "MIT/Apache-2.0"
keywords = ["sam3x", "sam3x8e", "no_std", "embedded", "svd2rust"]
readme = "README.md"
description =  "Device support crate for sam3x8e devices"

[lib]
test = false

[dependencies]
bare-metal = "0.2.0"
cortex-m = "0.5.8"
vcell = "0.1.0"

[dev-dependencies]
panic-halt = "0.2.0"
cortex-m = "0.6.0"
cortex-m-rt = "0.6.10"
cortex-m-semihosting = "0.3.3"
embedded-hal = "0.2.0"

[dependencies.cortex-m-rt]
optional = true
version = "0.6.5"

[features]
rt = ["cortex-m-rt/device"]
